crates/ty_python_semantic/resources/mdtest/snapshots/assignment_diagnosti…_-_Subscript_assignment…_-_Invalid_key_type_-_For_a_`dict`_(4aa9d1d82d07fcf1).snap
---
source: crates/ruff_mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: assignment_diagnostics.md - Subscript assignment diagnostics - Invalid key type - For a `dict`
mdtest path: crates/ty_python_semantic/resources/mdtest/subscript/assignment_diagnostics.md
---

# Python source files

## mdtest_snippet.py

```
1 | config: dict[str, int] = {}
2 | config[0] = 3  # error: [invalid-assignment]
```

# Diagnostics

```
error[invalid-assignment]: Invalid subscript assignment with key of type `Literal[0]` and value of type `Literal[3]` on object of type `dict[str, int]`
 --> src/mdtest_snippet.py:2:1
  |
2 | config[0] = 3  # error: [invalid-assignment]
  | ^^^^^^^-^^^^^
  |        |
  |        Expected key of type `str`, got `Literal[0]`
  |

```
