crates/ty_python_semantic/resources/mdtest/snapshots/assignment_diagnosti…_-_Subscript_assignment…_-_Invalid_value_type_(f87bd015df018509).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: assignment_diagnostics.md - Subscript assignment diagnostics - Invalid value type
mdtest path: crates/ty_python_semantic/resources/mdtest/subscript/assignment_diagnostics.md
---

# Python source files

## mdtest_snippet.py

```
1 | config: dict[str, int] = {}
2 | config["retries"] = "three"  # error: [invalid-assignment]
```

# Diagnostics

```
error[invalid-assignment]: Cannot assign to `dict[str, int]` with key of type `Literal["retries"]` and a value of type `Literal["three"]`
 --> src/mdtest_snippet.py:2:1
  |
1 | config: dict[str, int] = {}
2 | config["retries"] = "three"  # error: [invalid-assignment]
  | ^^^^^^^^^^^^^^^^^^^^-------
  |                     |
  |                     Expected value of type `int`, got `Literal["three"]`
  |
info: rule `invalid-assignment` is enabled by default

```
